--- a/fowlapproach.html
+++ b/fowlapproach.html
@@ -71,10 +71,9 @@
 		<img height="1238" width="2200" src="assets/images/fowlapproach_poster.jpg" alt="Poster image showing the Fowl Approach to Bird Watching print being held." >
   	</div>
 </div>
-<section class="column_content">
-    <div class="project-callout-shell">
-        <p class="project-callout">I learned that there are two different types of plywood. One that cuts smoothly and one that expedites carpal tunnel syndrome.</p>
-    </div>
+<section class="project-callout-shell wide-callout">
+    <p class="project-detail-heading">Trial and Error</p>
+    <p class="project-callout">I learned that there are two different types of plywood. One that cuts smoothly and one that expedites carpal tunnel syndrome.</p>
 </section>
 <img src="assets/images/fowlapproach_02.jpg" alt="A closeup of the Fowl Approach to Bird Watching print.">
 <section class="documentation">
@@ -106,7 +105,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="scadux.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
