--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h2 class="title">Featured Projects</h2>
 <p>A collection of websites, data visualizations, and illustrations.</p>
 </header>
-<section class="column_content">
+<section class="column_content index">
     <div class="left_container thumb-image thumb-image-left">
         <a href="absolutehorseradish.html">
         <img src="assets/images/absolutehorseradish_thumb.jpg" alt="The thumbnail image for the Absolute Horseradish zine and website project.">
@@ -85,7 +85,7 @@
         </a>
     </div>
 </section>
-<section class="column_content">
+<section class="column_content index">
     <div class="left_container thumb-image thumb-image-left">
         <a href="2014running.html">
         <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
@@ -105,7 +105,7 @@
         </a>
     </div>
 </section>
-<section class="column_content">
+<section class="column_content index">
     <div class="left_container thumb-image thumb-image-left">
         <a href="logos.html">
         <img src="assets/images/logos_thumb.png" alt="The thumbnail image representing my logo projects.">
@@ -125,7 +125,7 @@
         </a>
     </div>
 </section>
-<section class="column_content">
+<section class="column_content index">
     <div class="left_container thumb-image thumb-image-left">
         <a href="fowlapproach.html">
         <img src="assets/images/fowlapproach_thumb.jpg" alt="The thumbnail image for a woodcut print regarding bird hunting.">
@@ -145,7 +145,7 @@
         </a>
     </div>
 </section>
-<section class="column_content last-project-column">
+<section class="column_content index last-project-column">
     <div class="left_container thumb-image thumb-image-left">
         <a href="mikedoughty.html">
         <img src="assets/images/mikedoughty_thumb.jpg" alt="The thumbnail image for my Mike Doughty illustration.">
@@ -165,7 +165,7 @@
         </a>
     </div>
 </section>
-<section class="documentation">
+<section class="documentation index">
 	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious about my process for building this website? &gt;</a></p>
 </section>
 </div>
@@ -173,7 +173,7 @@
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
