--- a/logos.html
+++ b/logos.html
@@ -73,10 +73,9 @@
 <img class="logo-presentation" src="assets/images/logos_01.png" alt="The Console.Logging Co. logo.">
 <img class="logo-presentation" src="assets/images/logos_02.png" alt="The Cancer? I don't even know her. logo.">
 <img class="logo-presentation" src="assets/images/logos_03.png" alt="The Secret Society of Ink Slingers logo.">
-<section class="column_content">
-    <div class="project-callout-shell dark">
-        <p class="project-callout">Some of the logos are available to purchase on shirts and stickers.</p>
-    </div>
+<section class="project-callout-shell wide-callout">
+    <p class="project-detail-heading">Application</p>
+    <p class="project-callout">Some of the logos have been printed on items that protect you from sunburns. Some logos have been printed on items that make it harder for you to resell your laptop to someone who isn't a developer or lumberjack.</p>
 </section>
 <section class="column_content">
     <div class="left_container project-callout-shell logo-color">
@@ -111,7 +110,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="foolsquest.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
