--- a/mikedoughty.html
+++ b/mikedoughty.html
@@ -70,10 +70,9 @@
 		<img height="1238" width="2200" src="assets/images/mikedoughty_poster.jpg" alt="Poster image showing the shirt I designed for Mike Doughty." >
   	</div>
 </div>
-<section class="column_content">
-    <div class="project-callout-shell">
-        <p class="project-callout">If you mouse over / touch the image below from left to right you can get an idea of how the screen printing process works<span class="owl_colors"></span>.</p>
-    </div>
+<section class="project-callout-shell wide-callout">
+    <p class="project-detail-heading">A Teaching Moment</p>
+    <p class="project-callout">If you mouse over / touch the image below from left to right you can get an idea of how the screen printing process works.<br>Shown:<span class="owl_colors">&nbsp;Final Illustration</span>.</p>
 </section>
 <section> 
 <div class="test_mouse_test">
@@ -101,7 +100,7 @@
     <p class="project-detail-heading">Materials</p>
 	<p class="project-detail-content">Fabric</p>
     <p class="project-detail-heading">Purchase</p>
-	<p class="project-detail-content"><a href="http://mikedoughty.merchdirect.com/products/54191-owl-on-womens-light-blue-t-shirt" target="_blank">Owl Shirt</a></p>
+	<p class="project-detail-content">Sold Out</p>
     </article>
 </section>
 <img src="assets/images/mikedoughty_05.png" alt="Sketches for the Mike Doughty illustration.">
@@ -112,7 +111,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="scadcoursecards.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
