--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -71,10 +71,9 @@
     </div>
 </div>
 <img src="assets/images/scadcoursecards_01.png" alt="A diagram describing how the SCAD Course Cards are generated using Google Spreadsheets and Processing.">
-<section class="column_content">
-    <div class="project-callout-shell scadcoursecards">
-        <p class="project-callout">I wanted to make the system so easy to use that anyone with access to the spreadsheet could update the course cards.</p>
-    </div>
+<section class="project-callout-shell scadcoursecards wide-callout">
+  <p class="project-detail-heading">Goal</p>
+   <p class="project-callout">I wanted to make the system so easy to use that anyone with access to the spreadsheet could update the course cards.</p>
 </section>
 <img src="assets/images/scadcoursecards_02.png" alt="A diagram describing the different components of the SCAD Course Cards.">
 <section class="column_content">
@@ -91,10 +90,9 @@
     </div>
 </section>
 <img src="assets/images/scadcoursecards_03.png" alt="A diagram describing how the Google Spreadsheet controls the production percentages of the SCAD Course Cards.">
-<section class="column_content">
-    <div class="project-callout-shell scadcoursecards">
-        <p class="project-callout">I wrote a second Processing program to visualize all the individual degree program data as well. From a forecasting and production planning perspective, this data was a game-changer.</p>
-    </div>
+<section class="project-callout-shell scadcoursecards wide-callout">
+  <p class="project-detail-heading">Automation to the Rescue</p>
+  <p class="project-callout">I wrote a second Processing program to visualize all the individual degree program data as well. From a forecasting and production planning perspective, this data was a game-changer.</p>
 </section>
 <section class="column_content">
     <div class="left_container project-callout-shell scadcoursecards">
@@ -129,7 +127,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="absolutehorseradish.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
