--- a/scadux.html
+++ b/scadux.html
@@ -70,7 +70,7 @@
 		<img height="1238" width="2200" src="assets/images/scadux_poster.jpg" alt="Poster image the solar system illustration. It conveyed a user's mental models." >
   	</div>
 </div>
-<div id="slider01" class="flexslider white-bg">
+<div id="slider01" class="flexslider">
   	<ul class="slides">
  		<li><img src="assets/images/scadux_01.jpg" alt="A thanksgiving illustration conveying perception and sensation."></li>
 		<li><img src="assets/images/scadux_02.jpg" alt="A mail illustration conveying that people use known processes to learn new ones."></li>
@@ -112,7 +112,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="mikedoughty.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
