--- a/theakkermans.html
+++ b/theakkermans.html
@@ -66,11 +66,7 @@
 <p class="project-types">Website, Digital Calling Card</p>
 </header>
 <img src="assets/images/theakkermans_01.jpg" alt="The Akkermans website as viewed on a laptop and an iPad to show the different gradient orientations.">
-<div class="poster">
-	<div class="poster-image">
-		<img height="1080" width="1920" src="assets/images/theakkermans_poster.jpg" alt="Poster image showing the gradient and A mark used on The Akkermans website." >
-  	</div>
-</div>
+<img src="assets/images/theakkermans_poster.jpg" alt="Poster image showing the gradient and A mark used on The Akkermans website.">
 <section class="column_content">
     <div class="left_container project-callout-shell theakkermans">
         <p class="project-callout">There is a toggle button for a “friend mode” which swaps content and constantly fluctuates between different gradient combinations.</p>
@@ -102,7 +98,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="2014running.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
