--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
