--- a/foolsquest.html
+++ b/foolsquest.html
@@ -73,10 +73,9 @@
 <section class="embedded_video foolsquest-video">
 	<figure><iframe style="display:block;" src="http://player.vimeo.com/video/17135713?portrait=0&amp;badge=0&amp;color=c9ff23" width="700" height="468" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></figure>
 </section>
-<section class="column_content">
-    <div class="project-callout-shell dark">
-        <p class="project-callout">I tried to incorporate as many personal items for Rowan as I could. For example, the ping-pong score is his wedding anniversary. The intersecting balls signify the wedding rings.</p>
-    </div>
+<section class="project-callout-shell wide-callout">
+    <p class="project-detail-heading">A Personal Touch</p>
+    <p class="project-callout">I tried to incorporate as many personal items for Rowan as I could. For example, the ping-pong score is his wedding anniversary. The intersecting balls signify the wedding rings.</p>
 </section>
 <div id="slider01" class="flexslider">
   	<ul class="slides">
@@ -120,7 +119,7 @@
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="fowlapproach.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
