--- a/process.html
+++ b/process.html
@@ -107,10 +107,8 @@
 <h3 class="title">Refined Wireframe Preview</h3>
 	<p>I have been experimenting with using the Invision App platform for prototyping the refined wireframe I designed in Adobe Illustrator. After I exported the necessary still images it only took me about ten minutes from the time I signed up to create what you see above.</p>
 </section>
-<section class="project-callout-shell">
-	<div class="embedded_video">
-    	<figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
-   	</div>
+<section class="embedded_video process-video">
+    <figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
 </section>
 <section class="documentation process">
 <h3 class="title">Individual Page Pacing Diagram</h3>
@@ -138,7 +136,7 @@
 	<a href="index.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Home</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-	<h2 class="title">Contact</h2>
+	<h2 class="title">Connect</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
