--- a/absolutehorseradish.html
+++ b/absolutehorseradish.html
@@ -74,7 +74,7 @@
         <p class="project-callout">Absolute Horseradish has absolutely nothing to do with horseradish.</p>
     </div>
 </section>
-<section class="embedded_video absolutehorseradish-video">
+<section class="embedded_video">
 	<figure><iframe style="display:block;" src="https://player.vimeo.com/video/157457720?title=0&byline=0&portrait=0" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
 </section>
 <div class="poster">
