--- a/process.html
+++ b/process.html
@@ -107,7 +107,7 @@
 <h3 class="title">Refined Wireframe Preview</h3>
 	<p>I have been experimenting with using the Invision App platform for prototyping the refined wireframe I designed in Adobe Illustrator. After I exported the necessary still images it only took me about ten minutes from the time I signed up to create what you see above.</p>
 </section>
-<section class="embedded_video process-video">
+<section class="embedded_video">
     <figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
 </section>
 <section class="documentation process">
