--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 			<li><a href="index.html">Projects</a></li>
             <li><a class="current" href="about.html">About</a></li>
             <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
-            <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
+            <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
 </nav>
@@ -89,7 +89,8 @@
         </ul>
  	<h3 class="title">Hooray’s and Hurrah’s</h3> 
     <ul>
-    	<li><span class="darker-highlight">2010 Savannah ADDY Awards</span> – Silver – Telfair Ball Invitations</li>
+    	<li><span class="darker-highlight">2018 Print Magazine Regional Design Annual</span> – Two Tides Brewing Co.</li>
+      <li><span class="darker-highlight">2010 Savannah ADDY Awards</span> – Silver – Telfair Ball Invitations</li>
 		<li><span class="darker-highlight">2010 <em>Print Magazine</em> Print in Motion</span> – Finalist – Where the Wild Things Are</li>
 		<li><span class="darker-highlight">2009 UCDA Design Competition</span> – Gold Medalist – Savannah Secession Series</li>
 		<li><span class="darker-highlight">American Greetings Scholarship for Excellence in Design</span> (2008 – 2009)</li>
