--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             <li><a href="about.html">About</a></li>
             <li><a class="current" href="contact.html">Contact</a></li>
             <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
-            <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
+            <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
 </nav>
