--- a/errors/notfound.html
+++ b/errors/notfound.html
@@ -57,7 +57,7 @@
 			<li><a href="../index.html">Projects</a></li>
             <li><a href="../about.html">About</a></li>
             <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
-            <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
+            <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
 </nav>
