--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
-            <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
+            <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
 </nav><!-- #EndLibraryItem --></div>
