Adding Gauge Editorial Page

--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
         </ul>    
    	<h3 class="title">Professional Posse</h3> 
     	<ul>
+            <li><span class="darker-highlight">Creating Mornings Chicago, Volunteer</span> (2019 – present)</li>
             <li><span class="darker-highlight">AIGA</span> (2006 – present)</li>
             <li><span class="darker-highlight">Type Directors Club</span> (2008 – present)</li>
         </ul> 
