--- a/fowlapproach.html
+++ b/fowlapproach.html
@@ -71,7 +71,7 @@
 		<img height="1238" width="2200" src="assets/images/fowlapproach_poster.jpg" alt="Poster image showing the Fowl Approach to Bird Watching print being held." >
   	</div>
 </div>
-<section class="project-callout-shell wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Trial and Error</p>
     <p class="project-callout">I learned that there are two different types of plywood. One that cuts smoothly and one that expedites carpal tunnel syndrome.</p>
 </section>
