--- a/logos.html
+++ b/logos.html
@@ -73,7 +73,7 @@
 <img class="logo-presentation" src="assets/images/logos_01.png" alt="The Console.Logging Co. logo.">
 <img class="logo-presentation" src="assets/images/logos_02.png" alt="The Cancer? I don't even know her. logo.">
 <img class="logo-presentation" src="assets/images/logos_03.png" alt="The Secret Society of Ink Slingers logo.">
-<section class="project-callout-shell wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Application</p>
     <p class="project-callout">Some of the logos have been printed on items that protect you from sunburns. Some logos have been printed on items that make it harder for you to resell your laptop to someone who isn't a developer or lumberjack.</p>
 </section>
