--- a/mikedoughty.html
+++ b/mikedoughty.html
@@ -70,7 +70,7 @@
 		<img height="1238" width="2200" src="assets/images/mikedoughty_poster.jpg" alt="Poster image showing the shirt I designed for Mike Doughty." >
   	</div>
 </div>
-<section class="project-callout-shell wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">A Teaching Moment</p>
     <p class="project-callout">If you mouse over / touch the image below from left to right you can get an idea of how the screen printing process works.<br>Shown:<span class="owl_colors">&nbsp;Final Illustration</span>.</p>
 </section>
