--- a/foolsquest.html
+++ b/foolsquest.html
@@ -73,7 +73,7 @@
 <section class="embedded_video">
 	<figure><iframe style="display:block;" src="http://player.vimeo.com/video/17135713?portrait=0&amp;badge=0&amp;color=c9ff23" width="700" height="468" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></figure>
 </section>
-<section class="project-callout-shell wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">A Personal Touch</p>
     <p class="project-callout">I tried to incorporate as many personal items for Rowan as I could. For example, the ping-pong score is his wedding anniversary. The intersecting balls signify the wedding rings.</p>
 </section>
