--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <img src="assets/images/scadcoursecards_01.png" alt="A diagram describing how the SCAD Course Cards are generated using Google Spreadsheets and Processing.">
-<section class="project-callout-shell scadcoursecards wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
   <p class="project-detail-heading">Goal</p>
    <p class="project-callout">I wanted to make the system so easy to use that anyone with access to the spreadsheet could update the course cards.</p>
 </section>
@@ -90,7 +90,7 @@
     </div>
 </section>
 <img src="assets/images/scadcoursecards_03.png" alt="A diagram describing how the Google Spreadsheet controls the production percentages of the SCAD Course Cards.">
-<section class="project-callout-shell scadcoursecards wide-callout">
+<section class="project-callout-shell wide-callout project-callout-white">
   <p class="project-detail-heading">Automation to the Rescue</p>
   <p class="project-callout">I wrote a second Processing program to visualize all the individual degree program data as well. From a forecasting and production planning perspective, this data was a game-changer.</p>
 </section>
