Adding recent projects to portfolio pages.

--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 </header>
 <section class="column_content index">
     <div class="left_container thumb-image thumb-image-left">
+        <a href="recentwork.html">
+        <img src="assets/images/recentWOrk-thumb.jpg" alt="The thumbnail image for the recent work project page.">
+        <div class="thumb-text-wrap">
+        <h3 class="title">Recent Work</h3>
+        <p class="project-types">Case Studies Coming Soon</p>
+        </div>
+        </a>
+    </div>
+    <div class="right_container thumb-image thumb-image-right">
         <a href="gaugeeditorial.html">
         <img src="assets/images/gaugeeditorial_thumb.jpg" alt="The thumbnail image for the Gauge Editorial Illustration project.">
         <div class="thumb-text-wrap">
         <h3 class="title">Gauge Editorial Illustrations</h3>
         <p class="project-types">Editorial Illustrations, Animations</p>
-        </div>
-        </a>
-    </div>
-    <div class="right_container thumb-image thumb-image-right">
-        <a href="theakkermans.html">
-        <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
-        <div class="thumb-text-wrap">
-        <h3 class="title">The Akkermans!</h3>
-        <p class="project-types">Website, Digital Calling Card</p>
         </div>
         </a>
     </div>
