--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 <div class="main-wrapper">
 <header>
 <h2 class="title">About</h2>
-<p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them. Currently designing at <a href="https://gauge.agency/" target="_blank">Gauge</a> for clients such as Duck Head, Southern Tide, Orafol Vehicle Wraps, Swarovski, and OldTimeCandy.com.</p>
+<p>I am a digital designer and pizza advocate who likes to laugh with people. I have an insatiable curiosity and a desire to leave things better than I found them. Successful design is a strategic soup with equal parts research, empathy, collaboration, and guts. I’m inspired by companies trying to make the world a better place and hope to contribute the same. Currently designing at <a href="https://gauge.agency/" target="_blank">Gauge</a> for clients such as Duck Head, Southern Tide, Orafol Vehicle Wraps, Swarovski, and OldTimeCandy.com.</p>
 </header>
 <div class="poster">
 	<div class="poster-image">
@@ -81,6 +81,11 @@
             <li class="single-line-li">Mike Doughty</li>
             <li class="single-line-li">The Hornblow Group</li>
             <li class="single-line-li">Nocturne Records</li>
+        </ul>
+  <h3 class="title">Volunteering</h3>
+      <ul>
+            <li><span class="darker-highlight">Creative Mornings Chicago, Communications Coordinator</span> (2020 – present)</li>
+            <li><span class="darker-highlight">Creative Mornings Chicago, Event Day Volunteer</span> (2019 – present)</li>
         </ul>
 	<h3 class="title">Published</h3>
     <ul>
@@ -109,7 +114,6 @@
         </ul>    
    	<h3 class="title">Professional Posse</h3> 
     	<ul>
-            <li><span class="darker-highlight">Creating Mornings Chicago, Volunteer</span> (2019 – present)</li>
             <li><span class="darker-highlight">AIGA</span> (2006 – present)</li>
             <li><span class="darker-highlight">Type Directors Club</span> (2008 – present)</li>
         </ul> 
