--- a/absolutehorseradish.html
+++ b/absolutehorseradish.html
@@ -107,7 +107,7 @@
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-	<a href="scadcoursecards.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="gaugeeditorial.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="theakkermans.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
