Slight edits to two pages.

--- a/recentwork.html
+++ b/recentwork.html
@@ -111,7 +111,7 @@
     <p class="project-detail-heading">Process Makes Progress</p>
     <p class="project-callout">During the design phase, I made a thorough design system document that lived in InVision. This was used to communicate ideas and direction to both the client and our development team. You can view all my <a href="http://www.sethakkerman.com/assets/prototypes/munro-shoes/index.html#/screens/350977416" target="_blank">process documentation here</a>.</p>
 </section>
-<video autoplay loop muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:1000px;" poster="assets/video/munro-process.jpg">
+<video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:1000px;" poster="assets/video/munro-process.jpg">
 			<source src="assets/video/munro-process.mp4" type="video/mp4">
    			Bummer. Your broswer does not support the video tab.
 </video>
