Updated graphics on SCAD Course Card Project

--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -81,10 +81,10 @@
         <p class="project-callout">A color coded system was developed to quickly identify priorities and current status.</p>
     </div>
     <div class="right_container scadcoursecards">
-        <video autoplay loop style="width:100%; margin:0 auto; display:block;" poster="assets/video/coursecard_colorvariations.jpg">
-			<source src="assets/video/coursecard_colorvariations.webmhd.webm" type"video/webm">
-    		<source src="assets/video/coursecard_colorvariations.mp4" type"video/mp4">
-    		<source src="assets/video/coursecard_colorvariations.oggtheora.ogv" type"video/ogg">
+        <video autoplay loop playsinline muted="muted" style="width:100%; margin:0 auto; display:block;" poster="assets/video/coursecard_colorvariations.jpg">
+			<source src="assets/video/coursecard_colorvariations.webmhd.webm" type="video/webm">
+    		<source src="assets/video/coursecard_colorvariations.mp4" type="video/mp4">
+    		<source src="assets/video/coursecard_colorvariations.oggtheora.ogv" type="video/ogg">
    			Bummer. Your broswer does not support the video tab.
 </video>
     </div>
@@ -94,13 +94,10 @@
   <p class="project-detail-heading">Automation to the Rescue</p>
   <p class="project-callout">I wrote a second Processing program to visualize all the individual degree program data as well. From a forecasting and production planning perspective, this data was a game-changer.</p>
 </section>
-<section class="column_content">
-    <div class="left_container project-callout-shell scadcoursecards">
-        <img src="assets/images/scadcoursecards_04.png" alt="A diagram describing the spreadsheet used to generate the degree program charts..">
-    </div>
-    <div class="right_container project-callout-shell scadcoursecards">
-        <img src="assets/images/scadcoursecards_05.png" alt="A sample of the degree program chart showing seats offered, seats filled, and declared major.">
-    </div>
+<section class="column_content recent-work" style="margin-bottom:3em;">
+  <div class="grid-container grid-container-2 ">
+    <div class="item1"><img src="assets/images/scadcoursecards_04.png" alt="A diagram describing the spreadsheet used to generate the degree program charts."></div>
+    <div class="item2"><img src="assets/images/scadcoursecards_05.png" alt="A sample of the degree program chart showing seats offered, seats filled, and declared major."></div>
 </section>
 <section class="documentation">
 	<p>I love data and gaining insights from that information. Growing up I could have told you anything about baseball or basketball players because I would constantly analyze all the statistics that were printed on the back of their trading cards. Working with SCAD eLearning, I was able to apply those skills to help the department run smoother. I worked with the director to determine what data would allow him to best lead the department and make decisions about future programming easier. In addition, I worked with the assistant to the director to gather and sort the raw data from our internal system.</p>
