Updated spelling error.

--- a/recentwork.html
+++ b/recentwork.html
@@ -86,7 +86,7 @@
 </section>
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Glasses Half Full</p>
-    <p class="project-callout">Since launch, I have had the pleasure to work on other side projects for the <a href="https://www.twotidesbrewing.com/" target="_blank">Two Tides crew</a>. Below you can see some harmoney glasses with nautical hieroglyphs. I also got to do some blobbin' for the glassware and can label design for their one year anniversary release!</p>
+    <p class="project-callout">Since launch, I have had the pleasure to work on other side projects for the <a href="https://www.twotidesbrewing.com/" target="_blank">Two Tides crew</a>. Below you can see some harmony glasses with nautical hieroglyphs. I also got to do some blobbin' for the glassware and can label design for their one year anniversary release!</p>
     <p class="photo-credit">Photos of glassware and can below by <a href="https://www.instagram.com/twotidesliz/" target="_blank">Liz Massey</a> and <a href="https://www.instagram.com/jason.b.james/" target="_blank">Jason B. James</a>.</p>
 </section>
 <section class="column_content recent-work">
