Made some tweaks to the playback of the inline video.

--- a/gaugeeditorial.html
+++ b/gaugeeditorial.html
@@ -93,12 +93,12 @@
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-callout">Others helped convey the message better in motion.</p>
 </section>
-<video autoplay loop style="width:100%; display:block;" poster="assets/video/gaugeeditorial_motionSamples.jpg">
+<video autoplay loop playsinline muted="muted" style="width:100%; display:block;" poster="assets/video/gaugeeditorial_motionSamples.jpg">
 			<source src="assets/video/gaugeeditorial_motionSamples.mp4" type="video/mp4">
    			Bummer. Your broswer does not support the video tab.
 </video>
 <section class="documentation">
-	<p>Editorial illustrations are a fun way to flex creative muscles while still attending to necessary business goals. While maintaining a loose brand illustration aesthetic, the challenge of finding a way to succinctly and cleverly summarize and support an article is on a short time frame is rewarding.</p>
+	<p>Editorial illustrations are a fun way to flex creative muscles while still attending to necessary business goals. While maintaining a loose brand illustration aesthetic, the challenge of finding a way to succinctly and cleverly summarize and support an article on a short time frame is rewarding.</p>
 <p>At Gauge, we had weekly articles that needed a visual companion. The concept dictated the mode of output – static or animated. Between the editing phase and the publishing deadline, I typically had 1 – 4 hours to concept and execute an idea. These images were used across our social channels as well as emails and our blog.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
