--- a/2014running.html
+++ b/2014running.html
@@ -105,7 +105,7 @@
 <section class="bottom-nav">
 	<a href="theakkermans.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="2012card.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="holidaycards.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
