--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="2012card.html">
+        <a href="holidaycards.html">
         <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">2012 Holiday Card</h3>
-        <p class="project-types">Website, Photography</p>
+        <h3 class="title">Akkerman Family Holiday Cards</h3>
+        <p class="project-types">Website, Print, Photography</p>
         </div>
         </a>
     </div>
