Made a few grammar adjustments.

--- a/recentwork.html
+++ b/recentwork.html
@@ -117,7 +117,7 @@
 </video>
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">OldTimeCandy.com Marketing</p>
-    <p class="project-callout">I have had the pleasure of working with <a href="https://www.oldtimecandy.com/" target="_blank">OldTimeCandy.com</a> for just over three years. During that stretch I have collaborated with a copywriter to concept and design weekly marketing campaigns that span email, social, and website assets.</p>
+    <p class="project-callout">I have had the pleasure of working with <a href="https://www.oldtimecandy.com/" target="_blank">OldTimeCandy.com</a> for over three years. During that stretch I collaborated with a copywriter to concept and design weekly marketing campaigns that span email, social, and website assets.</p>
 </section>
 <div id="slider01" class="flexslider">
   	<ul class="slides">
