--- a/gaugeeditorial.html
+++ b/gaugeeditorial.html
@@ -79,7 +79,7 @@
 	<figure><iframe style="display:block;" src="http://player.vimeo.com/video/17135713?portrait=0&amp;badge=0&amp;color=c9ff23" width="700" height="468" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></figure>
 </section>-->
 <section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-callout">Some of the illustrations were more impactful as static images.</p>
+    <p class="project-callout">Some of the illustrations were most impactful as static images.</p>
 </section>
 <div id="slider01" class="flexslider">
   	<ul class="slides">
@@ -98,7 +98,7 @@
    			Bummer. Your broswer does not support the video tab.
 </video>
 <section class="documentation">
-	<p>Editorial illustrations are a fun way to flex creative muscles while still attending to necessary business goals. While maintaining a loose brand illustration aesthetic, the challenge of finding a way to succinctly and cleverly summarize and support an article on a short time frame is rewarding.</p>
+	<p>Editorial illustrations are a fun way to flex creative muscles while meeting necessary business goals. While maintaining a loose brand illustration aesthetic, the challenge of finding a way to succinctly and cleverly summarize and support an article on a short time frame is rewarding.</p>
 <p>At Gauge, we had weekly articles that needed a visual companion. The concept dictated the mode of output – static or animated. Between the editing phase and the publishing deadline, I typically had 1 – 4 hours to concept and execute an idea. These images were used across our social channels as well as emails and our blog.</p>
 	<article>
     <p class="project-detail-heading">Classification</p>
