Added Ricardo Beverly Hills Project Assets.

--- a/gaugeeditorial.html
+++ b/gaugeeditorial.html
@@ -95,7 +95,7 @@
 </section>
 <video autoplay loop playsinline muted="muted" style="width:100%; display:block;" poster="assets/video/gaugeeditorial_motionSamples.jpg">
 			<source src="assets/video/gaugeeditorial_motionSamples.mp4" type="video/mp4">
-   			Bummer. Your broswer does not support the video tab.
+   			Bummer. Your browser does not support the video tab.
 </video>
 <section class="documentation">
 	<p>Editorial illustrations are a fun way to flex creative muscles while meeting necessary business goals. While maintaining a loose brand illustration aesthetic, the challenge of finding a way to succinctly and cleverly summarize and support an article on a short time frame is rewarding.</p>
@@ -120,9 +120,9 @@
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-	<a href="recentwork.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="ricardobeverlyhills.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="absolutehorseradish.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="theakkermans.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
