--- a/holidaycards.html
+++ b/holidaycards.html
@@ -98,7 +98,7 @@
 <img src="assets/images/holidaycards-2014-01.jpg" alt="The 2014 Akkerman Family Holiday Card.">
 <video autoplay loop playsinline muted="muted" class="recent-work-wide" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:800px;" poster="assets/video/hand_gif_square.jpg">
       <source src="assets/video/hand_gif_square.mp4" type="video/mp4">
-        Bummer. Your broswer does not support the video tab.
+        Bummer. Your browser does not support the video tab.
 </video>
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">2012 - The Reindeer One</p>
@@ -141,7 +141,7 @@
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-	<a href="2014running.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="absolutehorseradish.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="logos.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
