--- a/recentwork.html
+++ b/recentwork.html
@@ -111,7 +111,7 @@
     <p class="project-types-roles">Role — Research, UX Design, UI Design, Prototyping</p>
 </section>
 <img class="recent-work-wide" src="assets/images/recentWork-southernTide-01.png" alt="A mockup of the Southern Tide website on desktop and mobile sizes.">
-<section class="project-callout-shell wide-callout project-callout-white">
+<!--<section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Munro Shoes</p>
     <p class="project-callout">Munro Shoes was ready to take the steps into a new eCommerce store and bring more to their customers. As a brand that prides itself on personalization, they needed a digital experience that reflected their mantra of “proper size, perfect fit.” While working at Gauge, I helped <a href="https://munroshoes.com/" target="_blank">Munro Shoes</a> create an immersive customer experience on Shopify Plus.</p>
     <p class="project-types-roles">Role — Research, UX Design, UI Design, Protyping</p>
@@ -123,8 +123,8 @@
 </section>
 <video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:1000px;" poster="assets/video/munro-process.jpg">
 			<source src="assets/video/munro-process.mp4" type="video/mp4">
-   			Bummer. Your broswer does not support the video tab.
-</video>
+   			Bummer. Your browser does not support the video tab.
+</video>-->
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">OldTimeCandy.com Website</p>
     <p class="project-callout">For over 17 years, <a href="https://www.oldtimecandy.com/" target="_blank">OldTimeCandy.com</a> has translated the simple delights of childhood into authentic growth. They continue to compete at the national level in a highly competitive and specialized market niche, while holding true to their brand. They continue to build their brand by connecting with their audience in delectable and unique ways.</p>
@@ -133,7 +133,7 @@
 <img class="recent-work-wide" src="assets/images/recentWork-oldTimeCandy-01.png" alt="A mockup of the OldTimeCandy.com website on desktop and mobile sizes.">
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Pattern Library / Design</p>
-    <p class="project-callout">Similar to the Munro Shoes project, I made a thorough design system document that lived in InVision. This is a partial sample of what was used to help the developers work quicker and more efficiently.</p>
+    <p class="project-callout">During the design phase, I made a thorough design system document that lived in InVision. This was used to communicate ideas and direction to both the client and our development team. This is a partial sample of what was used.</p>
 </section>
 <section class="column_content recent-work">
 	<div class="grid-container grid-container-3-patternLibrary">
@@ -167,7 +167,7 @@
 	  <div class="item2 span3--3">
 	  	<video autoplay loop playsinline muted="muted" style="display:block; margin-bottom:0;" poster="assets/video/recentWork-processing-02.jpg">
 			<source src="assets/video/recentWork-processing-02.mp4" type="video/mp4">
-   			Bummer. Your broswer does not support the video tab.
+   			Bummer. Your browser does not support the video tab.
 		</video>
 		</div>
 	</div>
@@ -177,7 +177,7 @@
 <section class="bottom-nav">
 	<a href="scadcoursecards.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="gaugeeditorial.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="munroshoes.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
