--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -85,7 +85,7 @@
 			<source src="assets/video/coursecard_colorvariations.webmhd.webm" type="video/webm">
     		<source src="assets/video/coursecard_colorvariations.mp4" type="video/mp4">
     		<source src="assets/video/coursecard_colorvariations.oggtheora.ogv" type="video/ogg">
-   			Bummer. Your broswer does not support the video tab.
+   			Bummer. Your browser does not support the video tab.
 </video>
     </div>
 </section>
