--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
         </div>
         </a>
     </div>
+    <div class="left_container thumb-image thumb-image-right">
+        <a href="munroshoes.html">
+        <img src="assets/images/munroShoes-thumb.jpg" alt="The thumbnail image for the Munro Shoes project page.">
+        <div class="thumb-text-wrap">
+        <h3 class="title">Munro Shoes</h3>
+        <p class="project-types">UX + UI Design, Prototyping, Design System</p>
+        </div>
+        </a>
+    </div>
+</section>
+<section class="column_content index">
+    <div class="right_container thumb-image thumb-image-left">
+        <a href="ricardobeverlyhills.html">
+        <img src="assets/images/ricardoBeverlyHills-thumb.jpg" alt="The thumbnail image for the Ricardo Beverly Hills Shopify project.">
+        <div class="thumb-text-wrap">
+        <h3 class="title">Ricardo Beverly Hills</h3>
+        <p class="project-types">UX + UI Design, Prototyping, Design System</p>
+        </div>
+        </a>
+    </div>
     <div class="right_container thumb-image thumb-image-right">
         <a href="gaugeeditorial.html">
         <img src="assets/images/gaugeEditorial_thumb.jpg" alt="The thumbnail image for the Gauge Editorial Illustration project.">
@@ -86,16 +106,7 @@
     </div>
 </section>
 <section class="column_content index">
-    <div class="left_container thumb-image thumb-image-left">
-        <a href="absolutehorseradish.html">
-        <img src="assets/images/absolutehorseradish_thumb.jpg" alt="The thumbnail image for the Absolute Horseradish zine and website project.">
-        <div class="thumb-text-wrap">
-        <h3 class="title">Absolute Horseradish</h3>
-        <p class="project-types">Website, Zine</p>
-        </div>
-        </a>
-    </div>
-    <div class="right_container thumb-image thumb-image-right">
+    <div class="right_container thumb-image thumb-image-left">
         <a href="theakkermans.html">
         <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
         <div class="thumb-text-wrap">
@@ -104,18 +115,18 @@
         </div>
         </a>
     </div>
-</section>
-<section class="column_content index">
-    <div class="left_container thumb-image thumb-image-left">
-        <a href="2014running.html">
-        <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
+    <div class="left_container thumb-image thumb-image-right">
+        <a href="absolutehorseradish.html">
+        <img src="assets/images/absolutehorseradish_thumb.jpg" alt="The thumbnail image for the Absolute Horseradish zine and website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">2014 Running</h3>
-        <p class="project-types">Website, Data Visualization</p>
+        <h3 class="title">Absolute Horseradish</h3>
+        <p class="project-types">Website, Zine</p>
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image thumb-image-right">
+</section>
+<section class="column_content index">
+    <div class="right_container thumb-image thumb-image-left">
         <a href="holidaycards.html">
         <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
@@ -124,9 +135,7 @@
         </div>
         </a>
     </div>
-</section>
-<section class="column_content index">
-    <div class="left_container thumb-image thumb-image-left">
+    <div class="left_container thumb-image thumb-image-right">
         <a href="logos.html">
         <img src="assets/images/logos_thumb.png" alt="The thumbnail image representing my logo projects.">
         <div class="thumb-text-wrap">
@@ -135,7 +144,9 @@
         </div>
         </a>
     </div>
-    <div class="right_container thumb-image thumb-image-right">
+</section>
+<section class="column_content index">
+    <div class="right_container thumb-image thumb-image-left">
         <a href="foolsquest.html">
         <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
         <div class="thumb-text-wrap">
@@ -144,23 +155,12 @@
         </div>
         </a>
     </div>
-</section>
-<section class="column_content index">
-    <div class="left_container thumb-image thumb-image-left">
-        <a href="fowlapproach.html">
-        <img src="assets/images/fowlapproach_thumb.jpg" alt="The thumbnail image for a woodcut print regarding bird hunting.">
+    <div class="left_container thumb-image thumb-image-right">
+        <a href="2014running.html">
+        <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">A Fowl Approach to Bird Watching</h3>
-        <p class="project-types">Printmaking, Woodcut Print</p>
-        </div>
-        </a>
-    </div>
-    <div class="right_container thumb-image thumb-image-right">
-        <a href="scadux.html">
-        <img src="assets/images/scaduxtheory_thumb.jpg" alt="The thumbnail image for my SCAD UX theory course project.">
-        <div class="thumb-text-wrap">
-        <h3 class="title">SCAD UX Theory Course</h3>
-        <p class="project-types">Illustration</p>
+        <h3 class="title">2014 Running</h3>
+        <p class="project-types">Website, Data Visualization</p>
         </div>
         </a>
     </div>
